[gd_scene load_steps=3 format=3 uid="uid://clu5nlkxfr68m"]

[ext_resource type="Script" path="res://src/kanji_drawing_level/kanji_drawing_level.gd" id="1_xnowa"]
[ext_resource type="PackedScene" uid="uid://yqv0h04fc3my" path="res://src/kanji_drawing_level/kanji_canvas.tscn" id="3_m63ai"]

[node name="KanjiDrawingLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xnowa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="KanjiLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/AspectRatioContainer"]
layout_mode = 2
stretch = true

[node name="KanjiCanvas" parent="VBoxContainer/AspectRatioContainer/SubViewportContainer" instance=ExtResource("3_m63ai")]
size = Vector2i(2, 2)

[node name="DrawBackground" type="ColorRect" parent="VBoxContainer/AspectRatioContainer/SubViewportContainer/KanjiCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.960784, 0.870588, 0.701961, 1)

[connection signal="drawing_finished" from="VBoxContainer/AspectRatioContainer/SubViewportContainer/KanjiCanvas" to="." method="_on_kanji_canvas_drawing_finished"]
